crates/nash-codegen/src/tests/snapshots/nash_codegen__tests__integration__rejected_generator_skips_body_and_selected_target_is_enforced_2_V1_Silent.snap
---
source: crates/nash-codegen/src/tests/integration.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Prop exposing (reject)\ntests\n    test \"plain\" = do\n        assert True\n    prop \"invalid\" =\n        let x via reject in\n        do\n            assert (Builtin.equalsInteger x x)\n"
---
--- plain
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3 (case [i1 (con bool True)] [[i3 i0] (lam i4 (error))] (con unit ())))
          (lam i3 (lam i4 [[[(force (builtin trace)) i3] i4] [i2 (con unit ())]]))])
        (lam i2 i2)])
      (lam i1 i1)])
    (con string "\0assert\0\48")])
--- invalid
--- prepare
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3
          [(lam i4
            [(lam i5
              [(lam i6
                [(lam i7
                  [(lam i8
                    [[[i8 i4]
                      (lam i9
                        [(lam i10
                          [(lam i11
                            [(lam i12
                              [(lam i13
                                [(lam i14
                                  [(lam i15
                                    [(lam i16
                                      (case
                                        [i15 i16]
                                        [[i6 i0]
                                          (lam i17
                                            [(lam i18
                                              [(lam i19
                                                [(lam i20
                                                  [(lam i21
                                                    [[[i7 i2]
                                                      [[(lam i22
                                                        [(lam i23
                                                          [(lam i24 i24)
                                                            (lam i24
                                                              (case
                                                                [[(builtin lessThanInteger) i24] [i20 (con integer 0)]]
                                                                [[i19 [[i19 i24] i22]] (builtin decodeUtf8)]
                                                                [[i19
                                                                  [[i19 [[i19 [[i19 i24] [(builtin subtractInteger) [i20 (con integer 0)]]]] i22]]
                                                                    (builtin decodeUtf8)]]
                                                                  [(builtin appendString) [i23 i18]]]))])
                                                          (lam i23 i23)])
                                                        [(lam i22 [i22 i22])
                                                          (lam i22
                                                            (lam i23
                                                              (case
                                                                [[(builtin lessThanInteger) i23] [i20 (con integer 10)]]
                                                                [[(builtin appendByteString)
                                                                  [[i22 i22] [[(builtin quotientInteger) i23] [i20 (con integer 10)]]]]
                                                                  [[(builtin consByteString)
                                                                    [[(builtin addInteger) [i20 (con integer 48)]]
                                                                      [[(builtin remainderInteger) i23] [i20 (con integer 10)]]]]
                                                                    [i21 (con bytestring #)]]]
                                                                [[(builtin consByteString) [[(builtin addInteger) [i20 (con integer 48)]] i23]]
                                                                  [i21 (con bytestring #)]])))]]
                                                        i14]]
                                                      (lam i22
                                                        [(lam i23
                                                          [(lam i24
                                                            [(lam i25
                                                              [(lam i26
                                                                [[[i7 i3]
                                                                  [[(lam i27
                                                                    [(lam i28
                                                                      [(lam i29 i29)
                                                                        (lam i29
                                                                          (case
                                                                            [[(builtin lessThanInteger) i29] [i25 (con integer 0)]]
                                                                            [[i24 [[i24 i29] i27]] (builtin decodeUtf8)]
                                                                            [[i24
                                                                              [[i24 [[i24 [[i24 i29] [(builtin subtractInteger) [i25 (con integer 0)]]]] i27]]
                                                                                (builtin decodeUtf8)]]
                                                                              [(builtin appendString) [i28 i23]]]))])
                                                                      (lam i28 i28)])
                                                                    [(lam i27 [i27 i27])
                                                                      (lam i27
                                                                        (lam i28
                                                                          (case
                                                                            [[(builtin lessThanInteger) i28] [i25 (con integer 10)]]
                                                                            [[(builtin appendByteString)
                                                                              [[i27 i27] [[(builtin quotientInteger) i28] [i25 (con integer 10)]]]]
                                                                              [[(builtin consByteString)
                                                                                [[(builtin addInteger) [i25 (con integer 48)]]
                                                                                  [[(builtin remainderInteger) i28] [i25 (con integer 10)]]]]
                                                                                [i26 (con bytestring #)]]]
                                                                            [[(builtin consByteString) [[(builtin addInteger) [i25 (con integer 48)]] i28]]
                                                                              [i26 (con bytestring #)]])))]]
                                                                    i16]]
                                                                  (lam i27 (error))])
                                                                (lam i26 i26)])
                                                              (lam i25 i25)])
                                                            (lam i24 (lam i25 [i25 i24]))])
                                                          i1])])
                                                    (lam i21 i21)])
                                                  (lam i20 i20)])
                                                (lam i19 (lam i20 [i20 i19]))])
                                              i1])]
                                        (con unit ())))
                                      i12])
                                    [i13 i14]])
                                  i12])
                                (builtin equalsInteger)])
                              i11])
                            i10])
                          i9])]
                      (lam i9
                        [(lam i10
                          [(lam i11
                            [(lam i12
                              [(lam i13
                                [(lam i14
                                  [(lam i15
                                    [(lam i16
                                      [[(force (builtin mkCons))
                                        [[(lam i17
                                          [(lam i18
                                            [(lam i19 i19)
                                              (lam i19
                                                (case
                                                  [[(builtin lessThanInteger) i19] [i15 (con integer 0)]]
                                                  [[i14 [[i14 i19] i17]] (builtin decodeUtf8)]
                                                  [[i14
                                                    [[i14 [[i14 [[i14 i19] [(builtin subtractInteger) [i15 (con integer 0)]]]] i17]]
                                                      (builtin decodeUtf8)]]
                                                    [(builtin appendString) [i18 i13]]]))])
                                            (lam i18 i18)])
                                          [(lam i17 [i17 i17])
                                            (lam i17
                                              (lam i18
                                                (case
                                                  [[(builtin lessThanInteger) i18] [i15 (con integer 10)]]
                                                  [[(builtin appendByteString)
                                                    [[i17 i17] [[(builtin quotientInteger) i18] [i15 (con integer 10)]]]]
                                                    [[(builtin consByteString)
                                                      [[(builtin addInteger) [i15 (con integer 48)]]
                                                        [[(builtin remainderInteger) i18] [i15 (con integer 10)]]]]
                                                      [i16 (con bytestring #)]]]
                                                  [[(builtin consByteString) [[(builtin addInteger) [i15 (con integer 48)]] i18]]
                                                    [i16 (con bytestring #)]])))]]
                                          i10]]
                                        (con (list string) [])])
                                      (lam i16 i16)])
                                    (lam i15 i15)])
                                  (lam i14 (lam i15 [i15 i14]))])
                                i1])
                              i11])
                            i10])
                          i9])])
                    (lam i8
                      (lam i9
                        (lam i10
                          (lam i11
                            [(lam i12
                              (case
                                i12
                                (lam i13
                                  (case
                                    i13
                                    (lam i14
                                      (lam i15
                                        [(lam i16
                                          [(lam i17
                                            [(lam i18 (constr 0 i18))
                                              (constr 0
                                                i17
                                                (lam i18 [(lam i19 [i9 i16]) i18])
                                                (lam i18 [(lam i19 [i10 i16]) i18]))])
                                            i15])
                                          i14]))))
                                (constr 1)))
                              [i8 i11]]))))])
                  (lam i7 (lam i8 (lam i9 [[i6 [[(builtin appendString) i7] i8]] i9])))])
                (lam i6 (lam i7 [[[(force (builtin trace)) i6] i7] [i5 (con unit ())]]))])
              (lam i5 i5)])
            (lam i4 [(lam i5 (constr 1)) i4])])
          (con string "\0assert\0\48\0\50\0")])
        (con string "\0assert\0\48\0\49\0")])
      (con string "-")])
    (con string "\0assert\0\48")])
