crates/nash-codegen/src/tests/snapshots/nash_codegen__tests__integration__rejected_generator_skips_body_and_selected_target_is_enforced_2_V2_Silent.snap
---
source: crates/nash-codegen/src/tests/integration.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Prop exposing (reject)\ntests\n    test \"plain\" = do\n        assert True\n    prop \"invalid\" =\n        let x via reject in\n        do\n            assert (Builtin.equalsInteger x x)\n"
---
--- plain
(program 1.1.0
  [(lam i0
    (case
      (con bool True)
      (force [[(force (builtin trace)) i0] (delay (error))])
      (con unit ())))
    (con string "\0assert\0\48")])
--- invalid
--- draw
(program 1.1.0
  [(lam i0
    [(lam i1
      (lam i2
        (case
          i1
          (lam i3
            (case
              [i3 i2]
              (lam i4
                [(lam i5
                  [(lam i6
                    [(lam i7
                      [(lam i8
                        [(lam i9
                          [(lam i10
                            [(lam i11
                              [(lam i12
                                [(lam i13
                                  (constr 0
                                    (constr 0
                                      i6
                                      [[(force (builtin mkCons))
                                        [[(lam i14
                                          [(lam i15
                                            [(lam i16 i16)
                                              (lam i16
                                                (case
                                                  [[(builtin lessThanInteger) i16] [i12 (con integer 0)]]
                                                  [(builtin decodeUtf8) [i14 i16]]
                                                  [[(builtin appendString) [i15 i11]]
                                                    [(builtin decodeUtf8)
                                                      [i14 [[(builtin subtractInteger) [i12 (con integer 0)]] i16]]]]))])
                                            (lam i15 i15)])
                                          [(lam i14 [i14 i14])
                                            (lam i14
                                              (lam i15
                                                (case
                                                  [[(builtin lessThanInteger) i15] [i12 (con integer 10)]]
                                                  [[(builtin appendByteString)
                                                    [[i14 i14] [[(builtin quotientInteger) i15] [i12 (con integer 10)]]]]
                                                    [[(builtin consByteString)
                                                      [[(builtin addInteger) [i12 (con integer 48)]]
                                                        [[(builtin remainderInteger) i15] [i12 (con integer 10)]]]]
                                                      [i13 (con bytestring #)]]]
                                                  [[(builtin consByteString) [[(builtin addInteger) [i12 (con integer 48)]] i15]]
                                                    [i13 (con bytestring #)]])))]]
                                          i8]]
                                        (con (list string) [])])))
                                  (lam i13 i13)])
                                (lam i12 i12)])
                              i0])
                            i9])
                          i8])
                        i7])
                      (case i4 (lam i7 (lam i8 i8)))])
                    i5])
                  (case i4 (lam i5 (lam i6 i5)))])
              (constr 1))))))
      [(lam i1 (constr 0 i1)) (lam i1 [(lam i2 (constr 1)) i1])]])
    (con string "-")])
--- run
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3
          [(lam i4
            (lam i5
              (case
                i4
                (lam i6
                  (case
                    [i6 i5]
                    (lam i7
                      [(lam i8
                        [(lam i9
                          [(lam i10
                            [(lam i11
                              [(lam i12
                                [(lam i13
                                  [(lam i14
                                    [(lam i15
                                      [(lam i16
                                        [(lam i17
                                          [(lam i18 (constr 0 i9))
                                            (case
                                              [i16 i17]
                                              (force
                                                [[(force (builtin trace)) i0]
                                                  (delay
                                                    [(lam i18
                                                      [(lam i19
                                                        [(lam i20
                                                          (force
                                                            [[(force (builtin trace))
                                                              [[(builtin appendString) i2]
                                                                [[(lam i21
                                                                  [(lam i22
                                                                    [(lam i23 i23)
                                                                      (lam i23
                                                                        (case
                                                                          [[(builtin lessThanInteger) i23] [i19 (con integer 0)]]
                                                                          [(builtin decodeUtf8) [i21 i23]]
                                                                          [[(builtin appendString) [i22 i18]]
                                                                            [(builtin decodeUtf8)
                                                                              [i21 [[(builtin subtractInteger) [i19 (con integer 0)]] i23]]]]))])
                                                                    (lam i22 i22)])
                                                                  [(lam i21 [i21 i21])
                                                                    (lam i21
                                                                      (lam i22
                                                                        (case
                                                                          [[(builtin lessThanInteger) i22] [i19 (con integer 10)]]
                                                                          [[(builtin appendByteString)
                                                                            [[i21 i21] [[(builtin quotientInteger) i22] [i19 (con integer 10)]]]]
                                                                            [[(builtin consByteString)
                                                                              [[(builtin addInteger) [i19 (con integer 48)]]
                                                                                [[(builtin remainderInteger) i22] [i19 (con integer 10)]]]]
                                                                              [i20 (con bytestring #)]]]
                                                                          [[(builtin consByteString) [[(builtin addInteger) [i19 (con integer 48)]] i22]]
                                                                            [i20 (con bytestring #)]])))]]
                                                                  i15]]]
                                                              (delay
                                                                [(lam i21
                                                                  [(lam i22
                                                                    [(lam i23
                                                                      (force
                                                                        [[(force (builtin trace))
                                                                          [[(builtin appendString) i3]
                                                                            [[(lam i24
                                                                              [(lam i25
                                                                                [(lam i26 i26)
                                                                                  (lam i26
                                                                                    (case
                                                                                      [[(builtin lessThanInteger) i26] [i22 (con integer 0)]]
                                                                                      [(builtin decodeUtf8) [i24 i26]]
                                                                                      [[(builtin appendString) [i25 i21]]
                                                                                        [(builtin decodeUtf8)
                                                                                          [i24 [[(builtin subtractInteger) [i22 (con integer 0)]] i26]]]]))])
                                                                                (lam i25 i25)])
                                                                              [(lam i24 [i24 i24])
                                                                                (lam i24
                                                                                  (lam i25
                                                                                    (case
                                                                                      [[(builtin lessThanInteger) i25] [i22 (con integer 10)]]
                                                                                      [[(builtin appendByteString)
                                                                                        [[i24 i24] [[(builtin quotientInteger) i25] [i22 (con integer 10)]]]]
                                                                                        [[(builtin consByteString)
                                                                                          [[(builtin addInteger) [i22 (con integer 48)]]
                                                                                            [[(builtin remainderInteger) i25] [i22 (con integer 10)]]]]
                                                                                          [i23 (con bytestring #)]]]
                                                                                      [[(builtin consByteString) [[(builtin addInteger) [i22 (con integer 48)]] i25]]
                                                                                        [i23 (con bytestring #)]])))]]
                                                                              i17]]]
                                                                          (delay (error))]))
                                                                      (lam i23 i23)])
                                                                    (lam i22 i22)])
                                                                  i1])]))
                                                          (lam i20 i20)])
                                                        (lam i19 i19)])
                                                      i1])])
                                              (con unit ()))])
                                          i13])
                                        [i14 i15]])
                                      i13])
                                    (builtin equalsInteger)])
                                  i12])
                                i11])
                              i10])
                            (case i7 (lam i10 (lam i11 i11)))])
                          i8])
                        (case i7 (lam i8 (lam i9 i8)))])
                    (constr 1))))))
            [(lam i4 (constr 0 i4)) (lam i4 [(lam i5 (constr 1)) i4])]])
          (con string "\0assert\0\48\0\50\0")])
        (con string "\0assert\0\48\0\49\0")])
      (con string "-")])
    (con string "\0assert\0\48")])
