crates/nash-codegen/src/tests/snapshots/nash_codegen__tests__integration__rejected_generator_skips_body_and_selected_target_is_enforced_3_V3_Silent.snap
---
source: crates/nash-codegen/src/tests/integration.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Prop exposing (reject)\ntests\n    test \"plain\" = do\n        assert True\n    prop \"invalid\" =\n        let x via reject in\n        do\n            assert (Builtin.equalsInteger x x)\n"
---
--- plain
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3 (case [i1 (con bool True)] [[i3 i0] (lam i4 (error))] (con unit ())))
          (lam i3 (lam i4 [[[(force (builtin trace)) i3] i4] [i2 (con unit ())]]))])
        (lam i2 i2)])
      (lam i1 i1)])
    (con string "\0assert\0\48")])
--- invalid
--- prepare
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3
          [(lam i4
            [(lam i5
              [(lam i6
                [(lam i7
                  [(lam i8
                    [[[i8 i4]
                      (lam i9
                        [(lam i10
                          [(lam i11
                            [(lam i12
                              [(lam i13
                                [(lam i14
                                  [(lam i15
                                    [(lam i16
                                      (case
                                        [i15 i16]
                                        [[i6 i0]
                                          (lam i17
                                            [(lam i18
                                              [(lam i19
                                                [(lam i20
                                                  [[[i7 i2]
                                                    [[(lam i21
                                                      [(lam i22
                                                        [(lam i23 i23)
                                                          (lam i23
                                                            (case
                                                              [[(builtin lessThanInteger) i23] [i19 (con integer 0)]]
                                                              [(builtin decodeUtf8) [i21 i23]]
                                                              [[(builtin appendString) [i22 i18]]
                                                                [(builtin decodeUtf8)
                                                                  [i21 [[(builtin subtractInteger) [i19 (con integer 0)]] i23]]]]))])
                                                        (lam i22 i22)])
                                                      [(lam i21 [i21 i21])
                                                        (lam i21
                                                          (lam i22
                                                            (case
                                                              [[(builtin lessThanInteger) i22] [i19 (con integer 10)]]
                                                              [[(builtin appendByteString)
                                                                [[i21 i21] [[(builtin quotientInteger) i22] [i19 (con integer 10)]]]]
                                                                [[(builtin consByteString)
                                                                  [[(builtin addInteger) [i19 (con integer 48)]]
                                                                    [[(builtin remainderInteger) i22] [i19 (con integer 10)]]]]
                                                                  [i20 (con bytestring #)]]]
                                                              [[(builtin consByteString) [[(builtin addInteger) [i19 (con integer 48)]] i22]]
                                                                [i20 (con bytestring #)]])))]]
                                                      i14]]
                                                    (lam i21
                                                      [(lam i22
                                                        [(lam i23
                                                          [(lam i24
                                                            [[[i7 i3]
                                                              [[(lam i25
                                                                [(lam i26
                                                                  [(lam i27 i27)
                                                                    (lam i27
                                                                      (case
                                                                        [[(builtin lessThanInteger) i27] [i23 (con integer 0)]]
                                                                        [(builtin decodeUtf8) [i25 i27]]
                                                                        [[(builtin appendString) [i26 i22]]
                                                                          [(builtin decodeUtf8)
                                                                            [i25 [[(builtin subtractInteger) [i23 (con integer 0)]] i27]]]]))])
                                                                  (lam i26 i26)])
                                                                [(lam i25 [i25 i25])
                                                                  (lam i25
                                                                    (lam i26
                                                                      (case
                                                                        [[(builtin lessThanInteger) i26] [i23 (con integer 10)]]
                                                                        [[(builtin appendByteString)
                                                                          [[i25 i25] [[(builtin quotientInteger) i26] [i23 (con integer 10)]]]]
                                                                          [[(builtin consByteString)
                                                                            [[(builtin addInteger) [i23 (con integer 48)]]
                                                                              [[(builtin remainderInteger) i26] [i23 (con integer 10)]]]]
                                                                            [i24 (con bytestring #)]]]
                                                                        [[(builtin consByteString) [[(builtin addInteger) [i23 (con integer 48)]] i26]]
                                                                          [i24 (con bytestring #)]])))]]
                                                                i16]]
                                                              (lam i25 (error))])
                                                            (lam i24 i24)])
                                                          (lam i23 i23)])
                                                        i1])])
                                                  (lam i20 i20)])
                                                (lam i19 i19)])
                                              i1])]
                                        (con unit ())))
                                      i12])
                                    [i13 i14]])
                                  i12])
                                (builtin equalsInteger)])
                              i11])
                            i10])
                          i9])]
                      (lam i9
                        [(lam i10
                          [(lam i11
                            [(lam i12
                              [(lam i13
                                [(lam i14
                                  [(lam i15
                                    [[(force (builtin mkCons))
                                      [[(lam i16
                                        [(lam i17
                                          [(lam i18 i18)
                                            (lam i18
                                              (case
                                                [[(builtin lessThanInteger) i18] [i14 (con integer 0)]]
                                                [(builtin decodeUtf8) [i16 i18]]
                                                [[(builtin appendString) [i17 i13]]
                                                  [(builtin decodeUtf8)
                                                    [i16 [[(builtin subtractInteger) [i14 (con integer 0)]] i18]]]]))])
                                          (lam i17 i17)])
                                        [(lam i16 [i16 i16])
                                          (lam i16
                                            (lam i17
                                              (case
                                                [[(builtin lessThanInteger) i17] [i14 (con integer 10)]]
                                                [[(builtin appendByteString)
                                                  [[i16 i16] [[(builtin quotientInteger) i17] [i14 (con integer 10)]]]]
                                                  [[(builtin consByteString)
                                                    [[(builtin addInteger) [i14 (con integer 48)]]
                                                      [[(builtin remainderInteger) i17] [i14 (con integer 10)]]]]
                                                    [i15 (con bytestring #)]]]
                                                [[(builtin consByteString) [[(builtin addInteger) [i14 (con integer 48)]] i17]]
                                                  [i15 (con bytestring #)]])))]]
                                        i10]]
                                      (con (list string) [])])
                                    (lam i15 i15)])
                                  (lam i14 i14)])
                                i1])
                              i11])
                            i10])
                          i9])])
                    (lam i8
                      (lam i9
                        (lam i10
                          (lam i11
                            [(lam i12
                              (case
                                i12
                                (lam i13
                                  (case
                                    i13
                                    (lam i14
                                      (lam i15
                                        [(lam i16
                                          [(lam i17
                                            [(lam i18 (constr 0 i18))
                                              (constr 0
                                                i17
                                                (lam i18 [(lam i19 [i9 i16]) i18])
                                                (lam i18 [(lam i19 [i10 i16]) i18]))])
                                            i15])
                                          i14]))))
                                (constr 1)))
                              [i8 i11]]))))])
                  (lam i7 (lam i8 (lam i9 [[i6 [[(builtin appendString) i7] i8]] i9])))])
                (lam i6 (lam i7 [[[(force (builtin trace)) i6] i7] [i5 (con unit ())]]))])
              (lam i5 i5)])
            (lam i4 [(lam i5 (constr 1)) i4])])
          (con string "\0assert\0\48\0\50\0")])
        (con string "\0assert\0\48\0\49\0")])
      (con string "-")])
    (con string "\0assert\0\48")])
