crates/nash-codegen/src/tests/snapshots/nash_codegen__tests__integration__rejected_generator_skips_body_and_selection_precedes_codegen_plain_Silent.snap
---
source: crates/nash-codegen/src/tests/integration.rs
assertion_line: 196
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Prop exposing (reject)\ntests\n    test \"plain\" = do\n        assert True\n    prop \"invalid\" =\n        let x via reject in\n        do\n            assert (Builtin.equalsInteger x x)\n"
---
--- plain
--- unoptimized Core
let message#9 : string = "\0assert\00" in
let fromBool#1 : bool -> bool = \value#4 : bool -> value#4 in
let fromUnit#7 : unit -> unit = \value#8 : unit -> value#8 in
let assertAt#3 : string -> (unit -> unit) -> unit = \marker#5 : string (rest#6 : unit -> unit) -> trace marker#5 rest#6 (fromUnit#7 ()) in
case@Bool fromBool#1 true of
  True -> ()
  False -> assertAt#3 message#9 (\unit#2 : unit -> error)
--- unoptimized UPLC
(program 1.1.0
  [(lam message_9
    [(lam fromBool_1
      [(lam fromUnit_7
        [(lam assertAt_3
          (case
            [fromBool_1 (con bool True)]
            [[assertAt_3 message_9] (lam unit_2 (error))]
            (con unit ())))
          (lam marker_5
            (lam rest_6
              [[[(force (builtin trace)) marker_5] rest_6] [fromUnit_7 (con unit ())]]))])
        (lam value_8 value_8)])
      (lam value_4 value_4)])
    (con string "\0assert\0\48")])
--- optimized Core
()
--- optimized UPLC
(program 1.1.0 (con unit ()))
--- encoded target UPLC
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3 (case [i1 (con bool True)] [[i3 i0] (lam i4 (error))] (con unit ())))
          (lam i3 (lam i4 [[[(force (builtin trace)) i3] i4] [i2 (con unit ())]]))])
        (lam i2 i2)])
      (lam i1 i1)])
    (con string "\0assert\0\48")])
